# corten

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
docs/: README.md  spec.md
src/: assembler.rs  instruction.rs  lib.rs  main.rs  repl.rs  vm.rs
src/assembler/: instruction_parser.rs  opcode_parser.rs  operand_parser.rs  program_parser.rs  register_parser.rs
