[package]
name = "corten"
version = "0.1.0"
authors = ["Anthony Foxclaw <35226681+tonytins@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rbtag = "0.3"
metacrate = { git = "https://github.com/tonytins/metacrate" }